# Notepad

./: index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
